nav-header padding has been adjusted for shiraz
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@15018 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/templates/shiraz/css/template.less
+++ b/code/site/templates/shiraz/css/template.less
@@ -90,6 +90,14 @@ a:hover
   .border-radius(3px);
 }
 
+.nav-pills
+{
+    .nav-header
+    {
+        padding: 10px 15px;
+    }	
+}
+
 // NOTIFICATION POPOVER
 .notifications-popover
 { 
