actor pop over scrolls if too large
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@15022 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/templates/shiraz/css/anahita/actor.less
+++ b/code/site/templates/shiraz/css/anahita/actor.less
@@ -295,3 +295,12 @@ img.actor-avatar
         margin: 20px 0;
     }	
 }
+
+.actors-popover
+{
+	.popover-content 
+	{
+		overflow:hidden;
+		max-height:250px;
+	}
+}
