Restyled the popover media grid to accommodate the scroller
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@15029 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/templates/shiraz/css/anahita/popover.less
+++ b/code/site/templates/shiraz/css/anahita/popover.less
@@ -4,7 +4,7 @@
     .popover-title
     {
        font-size: @baseFontSize + 1;
-       padding: 10px; 
+       padding: 15px 20px; 
     }
 
 	.popover-content
@@ -16,11 +16,11 @@
 	    
 	    .media-grid
 	    {           
-	        margin: -10px -15px -10px -10px;
-	        
+	       margin: 0;
+	       	        
 	        img
 	        {
-	            .square(29px);
+	            .square(40px);
 	            margin: 5px;
 	        }   
 	    }
