added popup styling for a list of actor entities
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@15033 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/templates/shiraz/css/style3.less
+++ b/code/site/templates/shiraz/css/style3.less
@@ -91,6 +91,7 @@
 // ANAHITA CORE CSS
 @import 'anahita/anahita.less';
 @import 'anahita/popover.less';
+@import "anahita/popup.less";
 @import 'anahita/editor.less';
 @import 'anahita/actor.less';
 @import 'anahita/apps.less';
