added linked in icon
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@15074 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/templates/shiraz/css/connect/connect.less
+++ b/code/site/templates/shiraz/css/connect/connect.less
@@ -41,6 +41,11 @@
             background:url("../images/icons/icon-google.png") no-repeat scroll 0 0 transparent;
         }
         
+        &.linkedin 
+        {
+            background:url("../images/icons/icon-linkedin.png") no-repeat scroll 0 0 transparent;
+        } 
+                
          &.yahoo 
         {
             background:url("../images/icons/icon-yahoo.png") no-repeat scroll 0 0 transparent;
