contains styling improvement of stories with media-grid
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@15104 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/templates/shiraz/css/stories/stories.less
+++ b/code/site/templates/shiraz/css/stories/stories.less
@@ -144,23 +144,44 @@
 			   padding: 5px 0;
 			}
 			
+			.entity-thumbnail
+			{
+			     img
+			     {
+			         width: 355px;
+			         height: auto;
+			         margin: 0;
+			     }
+			}
+			
 			.media-grid
 			{   
+			    .clearfix;
 			    > div
 			    {
-			        &.head
-			        {
-			           .clearfix;
-                       img
-                       {
-                          width: 350px;
-                       }
+                   margin: 5px;
+                   
+                   &.thumnail-medium
+                   {
+                        .clearfix;
+                        img
+                        {
+                            width: 355px;
+                            height: auto;
+                        }
+                    }
+			        
+			        &.thumbnail-square
+                    {
+				        img
+				        {
+				           .square(80px);
+				        }
 			        }
 			        
 			        img
 			        {
-			           width: 50px;
-			           margin: 5px;
+			             margin: 0;
 			        }
 			    }
 			    
