Photo uploader css list is improved
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@15191 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/templates/shiraz/css/photos/upload.less
+++ b/code/site/templates/shiraz/css/photos/upload.less
@@ -4,13 +4,14 @@
     {
         max-height:300px;
         overflow-y:auto;
+        margin-bottom: 20px;
     }
     
     .file 
     {
        .alert;
-       padding: 5px;
-       margin: 5px 0;
+       padding: 10px !important;
+       margin: 5px !important;
        
        .close 
        {
