Changed the border radius of buttons to 3px
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@15252 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/templates/shiraz/css/anahita/anahita.less
+++ b/code/site/templates/shiraz/css/anahita/anahita.less
@@ -266,7 +266,17 @@ ul.toolbar
 	}
 }
 
-.btn .caret
+.btn 
 {
-    margin: 7px 0;	
+    .border-radius(3px);
+    
+    &.caret
+    {
+        margin: 7px 0;	
+    }
+}
+
+.btn-large
+{
+    .border-radius(3px);
 }
