fixed entity title in stories and some colors
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@15535 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/templates/base/css/colors/colors.less
+++ b/code/site/templates/base/css/colors/colors.less
@@ -50,12 +50,14 @@
 
 #bottom-wrapper
 {
-    background-color: @gray;    
+    background-color: @gray;
+    border-bottom: 1px solid @grayLight;    
 }
 
 #footer-wrapper
 {
     background-color: @grayDark;
+    border-bottom: 1px solid @grayLight;  
     
     .module-title
     { 
