style2 fixed for subscriptions
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@15539 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/templates/shiraz/css/style2/colors/colors.less
+++ b/code/site/templates/shiraz/css/style2/colors/colors.less
@@ -432,7 +432,7 @@ ul.autocompleter-choices
         {            
             .key
             {
-                color: @grayDark;
+                color: @gray;
             }
         }
     }
@@ -458,7 +458,7 @@ ul.autocompleter-choices
     { 
         .key
         {
-            color: @grayLight;
+            color: @gray;
         }
     }
 }
