fixed popup entity title
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@15541 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/templates/base/css/core/popup.less
+++ b/code/site/templates/base/css/core/popup.less
@@ -16,7 +16,8 @@
             .entity-title
             {
                 margin: 5px 0;
-            } 
+                .entity-name;
+            }
         }
     }
 }
