--- a/code/site/templates/shiraz/css/style1/style.css
+++ b/code/site/templates/shiraz/css/style1/style.css
@@ -5413,6 +5413,8 @@ ul.toolbar li > a.active {
 }
 .popup-entities.an-actors .an-entity .entity-title {
   margin: 5px 0;
+  font-size: 14px;
+  line-height: 20px;
 }
 .an-editor-links {
   margin: 5px 0;
