--- a/code/site/templates/base/css/core/anahita.less
+++ b/code/site/templates/base/css/core/anahita.less
@@ -47,7 +47,7 @@ form.inline-edit
     code 
     { 
         padding: 10px; 
-    };
+    }
     
     h1 { font-size: @baseFontSize + 7 }
     h2 { font-size: @baseFontSize + 3 }
