--- a/code/site/templates/base/css/apps/stories.less
+++ b/code/site/templates/base/css/apps/stories.less
@@ -51,10 +51,10 @@
              display: inline;
              margin: 0 10px 0 0;
              
-              &.right
+              &.pull-right
               {
                   float: right;
-                  margin: 0 0 0 10px;
+                  margin: 0 0 0 20px;
               }
           }
         }
