adjusted the comments styling and entity container padding
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@16326 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/templates/base/css/core/comments.less
+++ b/code/site/templates/base/css/core/comments.less
@@ -2,8 +2,7 @@
 {    
     &.an-entity
     {
-        margin: 1px 0;
-        
+        margin: 1px 0 1px 20px;
         .entity-portrait-square
 	    {                   
 	        img
@@ -14,7 +13,7 @@
 	    
 	    .entity-container
 	    {
-	       padding-left: 50px;
+	       padding-left: 40px;
 	    }
     }	
 }
@@ -34,6 +33,8 @@ form.an-comment-form
 	{
 	   
 	   margin: 10px 0;
+	   padding-left: 20px;
+	   
 	   float: left;
 	   
        img
@@ -44,7 +45,7 @@ form.an-comment-form
 	
 	.comment-form-container
 	{
-		padding: 10px 0 0 50px;
+		padding: 10px 0 0 60px;
 		
 		textarea
 		{
