modal and popup entity margins are adjusted
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@16327 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/templates/base/css/colors/colors.less
+++ b/code/site/templates/base/css/colors/colors.less
@@ -244,6 +244,15 @@ dl
     }   
 }
 
+// MODAL
+.modal-body
+{   
+    .an-entity
+    {
+        border-top: 1px solid @bodyBackground;
+    }   
+}
+
 // Fixing the link button diabled view
 a.btn-primary
 {
