--- a/code/site/templates/base/css/core/comments.less
+++ b/code/site/templates/base/css/core/comments.less
@@ -24,16 +24,15 @@
 }
 
 // COMMENT FORM
-form.an-comment-form
+.an-comment-form
 {	
 	margin: 10px 0;
-	padding: 0 10px;
+	padding: 0 10px 0 30px;
 	
 	.comment-form-avatar
 	{
 	   
 	   margin: 10px 0;
-	   padding-left: 20px;
 	   
 	   float: left;
 	   
@@ -45,7 +44,7 @@ form.an-comment-form
 	
 	.comment-form-container
 	{
-		padding: 10px 0 0 60px;
+		padding: 10px 0 0 40px;
 		
 		textarea
 		{
