Story titles are now more prominent.
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@16387 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/templates/base/css/apps/stories.less
+++ b/code/site/templates/base/css/apps/stories.less
@@ -71,7 +71,10 @@
         {
             font-size: @baseFontSize + 1;
             font-weight: normal;
-            padding: 0;
+            a
+            {
+                font-weight: bold;
+            }
         }
         
         .story-body
