--- a/code/site/templates/base/css/apps/stories.less
+++ b/code/site/templates/base/css/apps/stories.less
@@ -69,7 +69,7 @@
         
         h4.story-title
         {
-            font-size: @baseFontSize + 1;
+            font-size: @baseFontSize;
             font-weight: normal;
             a
             {
