improved the text highlight
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@17344 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/templates/base/css/core/anahita.less
+++ b/code/site/templates/base/css/core/anahita.less
@@ -194,3 +194,10 @@ ul.an-actions
 {
     margin: 18px 0;	
 }
+
+.an-text-highlight
+{
+    display:inline-block;
+    background-color:#CEDFF0;   
+    padding:1px;
+}
