notification process will still work if no notificatio id is passed
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@17367 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/templates/base/css/core/template.less
+++ b/code/site/templates/base/css/core/template.less
@@ -135,6 +135,14 @@ a:hover
 }
 
 // MODULES
+.module-border
+{
+    &.well
+    {
+        padding: 5px 10px;
+    }	
+}
+
 .module-title
 {
 	font-size: @baseFontSize + 3;
@@ -143,7 +151,8 @@ a:hover
 }
 
 .module-content
-{   
+{
+    
     ul
     {
         margin: 0;
