--- a/code/site/templates/base/css/colors/colors.less
+++ b/code/site/templates/base/css/colors/colors.less
@@ -1,6 +1,17 @@
 //VARIABLES
 @borderColor: darken(@grayLighter, 10%);
 
+.border-bottom
+{
+   border-bottom: 1px solid @borderColor;
+}
+
+hr
+{
+    border-top: 0;
+    border-bottom: 1px solid @borderColor;
+}
+
 //NAVPILLS
 .nav
 {
@@ -237,11 +248,6 @@ ul.autocompleter-choices
             }
         }
     }
-}
-
-.separator
-{
-   border-bottom: 1px solid @borderColor;
 }
 
 // STORIES
